Corrected guest tasks fetch issue, hero section visible on irrelevant tabs issue and checklist mark issue

--- a/todo/src/Modals/CreateTask/CreateTask.css
+++ b/todo/src/Modals/CreateTask/CreateTask.css
@@ -211,6 +211,7 @@
   font-family: "poppins", sans-serif;
   font-size: 14px;
   outline: none;
+  cursor: pointer;
   transition: all 0.3s ease;
 }
 
